--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_platform_widgets: 1.10.0
+  flutter_platform_widgets: ^3.0.0
   cupertino_list_tile: ^0.2.0
   cupertino_stepper:
     git:
